@@ -1,6 +1,9 @@
 package ru.gb.zaripov.core.controllers;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import ru.gb.zaripov.api.ProductDto;
@@ -9,21 +12,34 @@ import ru.gb.zaripov.core.services.ProductService;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @RestController
 @RequestMapping("/api/v1/products")
 @RequiredArgsConstructor
 @CrossOrigin("*")
+@Slf4j
 public class ProductController {
     private final ProductService productService;
     private final ProductConverter productConverter;
 
     @GetMapping
-    public List<ProductDto> getAllProducts() {
-        return productService.findAll().stream()
-                .map(productConverter::toDto)
-                .toList();
+    public Page<ProductDto> getAllProducts(
+            @RequestParam(name = "page", defaultValue = "1") Integer page,
+            @RequestParam(name = "pageSize", defaultValue = "1") Integer pageSize,
+            @RequestParam(name = "minPrice", required = false) BigDecimal minPrice,
+            @RequestParam(name = "maxPrice", required = false) BigDecimal maxPrice,
+            @RequestParam(name = "titlePart", required = false) String titlePart
+    ) {
+        page = Math.max(1, page);
+        pageSize = Math.max(1, pageSize);
+        return new PageImpl<>(
+                productService.find(page, pageSize, minPrice, maxPrice, titlePart).stream()
+                        .map(productConverter::toDto)
+                        .collect(Collectors.toList())
+        );
+
     }
 
     @GetMapping("/{id}")
